# ghost_post_blog_app

./: README.md  manage.py  pyproject.toml  requirements.txt
GhostPost_App/: admin.py  apps.py  forms.py  models.py  views.py
GhostPost_App/migrations/: 0001_initial.py
GhostPost_Project/: .env_auth  asgi.py  settings.py  urls.py  wsgi.py
templates/: 400.html  403.html  404.html  500.html  base.html  boast.html  index.html  post_form.html  roast.html  votes.html
